--- a/native/www/index.html
+++ b/native/www/index.html
@@ -38,12 +38,12 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 
         <link rel="stylesheet" type="text/css" href="css/main.6f6cb4a1.css">
-        <title>Where Is It Boating</title>
+        <title>Retain</title>
     </head>
     <body>
         <div id="root"></div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript" src="js/main.6bd747ea.js"></script>
+        <script type="text/javascript" src="js/main.519f1646.js"></script>
     </body>
 </html>
