--- a/native/platforms/ios/www/index.html
+++ b/native/platforms/ios/www/index.html
@@ -37,13 +37,19 @@
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 
-        <link rel="stylesheet" type="text/css" href="css/main.6f6cb4a1.css">
-        <title>Where Is It Boating</title>
+        <link rel="stylesheet" type="text/css" href="css/main.9fcaded6.css">
+        <style >
+        @font-face {
+            font-family: "Gasalt-Black";
+            src: url("./fonts/Gasalt-Black.ttf") format("opentype");
+            }
+        </style>
+        <title>Retain</title>
     </head>
     <body>
         <div id="root"></div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript" src="js/main.7275f8f8.js"></script>
+        <script type="text/javascript" src="js/main.a168ca78.js"></script>
     </body>
 </html>
