--- a/native/www/index.html
+++ b/native/www/index.html
@@ -41,7 +41,7 @@
         <style >
         @font-face {
             font-family: "Gasalt-Black";
-            src: url("/fonts/Gasalt-Black.ttf") format("opentype");
+            src: url("./fonts/Gasalt-Black.ttf") format("opentype");
             }
         </style>
         <title>Retain</title>
@@ -50,6 +50,6 @@
         <div id="root"></div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript" src="js/main.1765d745.js"></script>
+        <script type="text/javascript" src="js/main.a168ca78.js"></script>
     </body>
 </html>
